# FaceRecognitionCpp

./: .gitignore  CMakeLists.txt  README.md  facetracking.cpp  facetracking.hpp  main.cpp  tvm_runtime_pack.cc
include/: mtcnn_opencv.cpp
include/MTCNN/: mtcnn_opencv.cpp  mtcnn_opencv.hpp
include/RetinaFace/: anchor_generator.cpp  anchor_generator.h  config.h  ulsMatF.h
models/: deploy_graph_y1-arcface-emore_115.json
models/linux/: deploy_graph_y1-arcface-emore_109.json  deploy_param_y1-arcface-emore_109.params  mnet.25.x86.cpu.json  mnet.25.x86.cpu.params
models/linux_auto/: deploy_graph_y1-arcface-emore_109.json  deploy_param_y1-arcface-emore_109.params
models/macos/: deploy_param_y1-arcface-emore_115.params  mnet.25.x86.cpu.json  mnet.25.x86.cpu.params
models/macos_auto/: deploy_graph_y1-arcface-emore_109.json  deploy_param_y1-arcface-emore_109.params
tvm_complier/: complier.py
